Fixed home title on tablet

--- a/style.css
+++ b/style.css
@@ -589,7 +589,7 @@ main.home #about .byline #byline-3 {
   grid-area: 3/3/4/end;
 }
 main.home #about .about-text {
-  max-width: 500px;
+  max-width: 72vw;
   align-self: center;
 }
 main.home #artists {
@@ -1133,21 +1133,17 @@ footer .social .social-icon svg {
     overflow-y: clip;
   }
   main.home .header {
-    min-height: 80vh;
-    background: url(assets/dress/tablet/home_header_2160w.jpg) fixed no-repeat #f74500;
-    background-size: auto 100%;
+    min-height: 75vh;
+    background: url(assets/dress/tablet/home_header_2160w.jpg) fixed no-repeat;
+    background-size: cover;
+    background-position-x: 50%;
   }
   main.home .header #title {
-    display: flex;
-    padding: 8vh 0 3vh 0;
-    margin: 0 3rem;
-    max-width: 100%;
+    padding: 4rem 1.5rem;
   }
   main.home .header #title h1 {
     padding: 0;
     margin: auto;
-    font: 14vw "degular-variable", sans-serif;
-    font-variation-settings: "wght" 700, "opsz" 72, "ital" 0;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     -moz-column-gap: 1rem;
@@ -1164,8 +1160,9 @@ footer .social .social-icon svg {
     grid-row: 2/3;
   }
   main.home .header #title h1 #title-3 {
-    grid-column: 8/13;
+    grid-column: 2/12;
     grid-row: 3/4;
+    justify-self: end;
   }
   main.home .header #title h1 #title-4 {
     grid-column: 6/10;
