--- a/styles/_front-page.scss
+++ b/styles/_front-page.scss
@@ -150,7 +150,7 @@ main.home {
     }
 
     .about-text {
-      max-width: 500px;
+      max-width: 72vw;
       align-self: center;
     }
   }
