--- a/styles/_tablet720.scss
+++ b/styles/_tablet720.scss
@@ -21,8 +21,6 @@
   .h5 {
     font-size: 0.875rem;
   }
-  a {
-  }
 
   .p1,
   span.p1,
@@ -95,20 +93,17 @@
   main.home {
     overflow-y: clip;
     .header {
-      min-height: 80vh;
-      background: url(assets/dress/tablet/home_header_2160w.jpg) fixed no-repeat
-        $primary-orange;
-      background-size: auto 100%;
+      min-height: 75vh;
+      background: url(assets/dress/tablet/home_header_2160w.jpg) fixed no-repeat;
+      background-size: cover;
+      background-position-x: 50%;
 
       #title {
-        display: flex;
-        padding: 8vh 0 3vh 0;
-        margin: 0 3rem;
-        max-width: 100%;
+        padding: 4rem 1.5rem;
+        // margin: 0 3rem;
         h1 {
           padding: 0;
           margin: auto;
-          @include title-display-tablet;
           @include twelve-col-grid;
           grid-template-rows: repeat(4, 1fr);
           #title-1 {
@@ -120,8 +115,9 @@
             grid-row: 2/3;
           }
           #title-3 {
-            grid-column: 8/13;
+            grid-column: 2/12;
             grid-row: 3/4;
+            justify-self: end;
           }
           #title-4 {
             grid-column: 6/10;
